--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
         <div class="container">
             <div class="page-header">
                 <h1>Instant-runoff voting tool</h1>
-                <p class="lead">Description</p>
+                <p class="lead">A Website that helps you calculate the result of an Instant-runoff vote.</p>
             </div>
 
-            <h2>Description</h2>
-            <p>description text</p>
-            <ul>
-                <li>- Source code</li>
-                <li>- License</li>
-                <li>- powered by bootstrap and jquery</li>
-                <li>- by PeterTheOne</li>
-            </ul>
+            <h2>About</h2>
+            <p>
+                This is a website that helps you calculate the result of an
+                <a href="https://en.wikipedia.org/wiki/Instant-runoff_voting">instant-runoff vote</a>.
+                It's programmed with javascript powered by <a href="http://jquery.com/">jQuery</a>
+                and structured and styled with HTML and CSS on the basis of
+                <a href="http://getbootstrap.com/">bootstrap</a>. The Sourcecode is licensed under the
+                <a href="http://opensource.org/licenses/MIT">MIT License</a> and available on
+                <a href="https://github.com/PeterTheOne/IRV">GitHub</a>. It was written by
+                <a href="http://petergrassberger.com">Peter Grassberger</a> aka.
+                <a href="https://twitter.com/PeterTheOne">PeterTheOne</a>.
+            </p>
 
             <hr />
 
