--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <p>
                         Please enter one ballot per line. A ballot consists of
                         ranking number <code>1 2 3 4 ...</code> in a row separated
-                        by a comma<code>,</code>. One ballot has the same amount
-                        of ranking number as there candidates. The first number
+                        by a comma<code>,</code>. A ballot has the same amount
+                        of ranking numbers as there are candidates. The first number
                         is the rank of the first candidate on this ballot, etc.
                         Spaces are ignored.
                     </p>
