--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                     <pre>3, 2, 1, 4<br />4, 3, 1, 2<br />1, 3, 4, 2<br />...</pre>
                     <label for="ballots">Ballots</label>
                     <textarea id="ballots" class="form-control" rows="3"></textarea>
+
+                    <input id="incompleteBallots" type="checkbox" /> Accept incomplete ballots
                 </div>
 
                 <button id="submit" type="submit" class="btn btn-default">Submit</button>
