--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
         <script src="js/lib/jquery-1.10.2.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="js/irv.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
