--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,7 @@
 
         <script src="qunit-1.12.0.js"></script>
         <script src="../js/lib/jquery-1.10.2.js"></script>
+        <script src="../js/irv.js"></script>
         <script src="../js/script.js"></script>
         <script src="tests.js"></script>
     </body>
