--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <label for="ballots">Ballots</label>
                     <textarea id="ballots" class="form-control" rows="3"></textarea>
 
-                    <input id="incompleteBallots" type="checkbox" /> Accept incomplete ballots
+                    <input id="incompleteBallots" type="checkbox" /> <label for="incompleteBallots">Accept incomplete ballots</label>
                 </div>
 
                 <button id="submit" type="submit" class="btn btn-default">Submit</button>
