--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
 
-                <button id="submit" type="submit" class="btn btn-default">Submit</button>
+                <button id="submit" type="submit" class="btn btn-primary">Submit</button>
 
                 <hr />
             </form>
