add german translation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
+
         <title>Instant-runoff voting</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -12,6 +14,16 @@
             <div class="page-header">
                 <h1>Instant-runoff voting tool</h1>
                 <p class="lead">Calculate the result of an Instant-runoff vote from your browser.</p>
+                <nav class="language">
+                    <ul>
+                        <li>
+                            <a href="de/">Deutsch</a>
+                        </li>
+                        <li>
+                            <a href="./">English</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
 
             <h2>About</h2>
