change putin to François Hollande

--- a/de/index.html
+++ b/de/index.html
@@ -58,7 +58,7 @@
                     </p>
                     <div class="col-md-4">
                         <p>Beispiel</p>
-                        <pre>Barack Obama<br />Vladimir Putin<br />Angela Merkel<br /></pre>
+                        <pre>Barack Obama<br />François Hollande<br />Angela Merkel<br /></pre>
                     </div>
                     <div class="col-md-8">
                         <label for="candidates">KandidatInnen Liste</label>
