--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </p>
                     <div class="col-md-4">
                         <p>Example</p>
-                        <pre>Barack Obama<br />Vladimir Putin<br />Angela Merkel<br /></pre>
+                        <pre>Barack Obama<br />François Hollande<br />Angela Merkel<br /></pre>
                     </div>
                     <div class="col-md-8">
                         <label for="candidates">Candidates</label>
