make instructions more precise
#1

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <form role="form">
                 <div class="form-group col-md-6">
-                    <h3>Candidates</h3>
+                    <h3>Candidates List</h3>
                     <p>
                         Please enter the names of the candidates, one candidate per
                         line. This list of candidates works like a template for the
@@ -72,8 +72,10 @@
                         ranking numbers <code>1 2 3 4 ...</code> in a row separated
                         by a comma <code>,</code>. A ballot has the same amount
                         of ranking numbers as there are candidates. The numbers are
-                        in the same order as the candidates, the first number is the
-                        rank of the first candidate on this ballot and so on.
+                        in the same order as the candidates in the candidates list, 
+                        the first number is the rank of the first candidate of the 
+                        candidate list on this ballot, the second number is the rank 
+                        of the sencond candidate and so on.
                         Spaces are ignored. Incomplete ballots can be created by
                         using <code>0</code> as a placeholder or leaving the
                         position empty like this <code>1, 0, 2, , 3</code>.
