also make german instructions more precise
#1

--- a/de/index.html
+++ b/de/index.html
@@ -49,7 +49,7 @@
 
             <form role="form">
                 <div class="form-group col-md-6">
-                    <h3>Kandidatinnen und Kandidaten</h3>
+                    <h3>Kandidatinnen- und Kandidatenliste</h3>
                     <p>
                         Bitte fügen Sie die Namen der Kandidaten und Kandidatinnen ein, immer einen Namen pro Zeile.
                         Diese Liste kann man sich wie eine Vorlage für einen Stimmzettel vorstellen.
@@ -71,10 +71,10 @@
                     <p>
                         Bitte tragen sie hier die ausgefüllten Stimmzettel ein, immer nur einen pro Zeile.
                         Ein Stimmzettel besteht aus Rangnummern <code>1 2 3 4 ...</code> die hinter
-                        einander geschrieben werden und jeweils mit einem comma <code>,</code> getrennt.
+                        einander geschrieben werden, jeweils mit einem comma <code>,</code> getrennt.
                         Ein Stimmzettel hat genau so viele Nummern wie es Kandidatinnen und Kandidaten gibt.
-                        Die Nummer werden in der Reihenfolge der Kandidaten geschrieben, die
-                        erste Nummer ist der Rang von der ersten Kandidatin auf dem Stimmzettel, die
+                        Die Nummern werden in der Reihenfolge der Kandidaten in der KandidatenInnenliste geschrieben, 
+                        die erste Nummer ist der Rang von der ersten Kandidatin auf dem Stimmzettel, die
                         zweite Nummer ist der Rang vom zweiten Kandidaten und so weiter.
                         Leerzeilen werden ignoriert. Unvollständige Stimmzettel können eingegeben werden
                         indem eine <code>0</code> als Platzhalter verwendet wird oder die Position
