fix tests, add threshold to german version and some minor changes

--- a/de/index.html
+++ b/de/index.html
@@ -114,6 +114,14 @@
                         </label>
                     </div>
 
+                    <label id="thresholdcontainer">
+                        Victory threshold:
+                        <div class="input-group" id="thresholdbox">
+                            <input type="text" class="form-control decimal" id="threshold" name="threshold" value="50" placeholder="50">
+                            <span class="input-group-addon">%</span>
+                        </div>
+                    </label>
+
                     <button id="submit" type="submit" class="btn btn-primary">Abschicken</button>
                 </div>
 
