--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <label id="thresholdcontainer">
                         Victory threshold:
                         <div class="input-group" id="thresholdbox">
-                            <input type="text" class="form-control decimal" id="threshold" name="threshold" placeholder="50">
+                            <input type="text" class="form-control decimal" id="threshold" name="threshold" value="50" placeholder="50">
                             <span class="input-group-addon">%</span>
                         </div>
                     </label>
