--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         in the same order as the candidates in the candidates list, 
                         the first number is the rank of the first candidate of the 
                         candidate list on this ballot, the second number is the rank 
-                        of the sencond candidate and so on.
+                        of the second candidate and so on.
                         Spaces are ignored. Incomplete ballots can be created by
                         using <code>0</code> as a placeholder or leaving the
                         position empty like this <code>1, 0, 2, , 3</code>.
